[tool.poetry]
name = "pybet"
version = "0.4.0"
description = "A library of betting utilities to assist with calculation of bets, stakes and markets"
license = "GPL-3.0-only"
authors = ["Robert Peacock <robertjamespeacock@gmail.com>"]
readme = "README.md"
repository = "https://github.com/peaky76/pybet"
keywords = ["betting", "gambling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.9.0"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
auto-changelog = "^0.6.0"
coverage = "^7.1.0"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

