[tool.poetry]
name = "pybet"
version = "0.6.1"
description = "A library of betting utilities to assist with calculation of bets, stakes and markets"
license = "GPL-3.0-only"
authors = ["Robert Peacock <robertjamespeacock@gmail.com>"]
readme = "README.md"
repository = "https://github.com/peaky76/pybet"
documentation = "https://pybet.readthedocs.io/"
keywords = ["betting", "gambling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.9.0"

[tool.poetry.group.dev.dependencies]
auto-changelog = "^0.6.0"
black = "^23.1.0"
coverage = "^7.1.0"
sphinx = "^6.1.3"
sphinx-rtd-theme = "^1.2.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

