[tool.poetry]
name = "pybet"
version = "0.8.1"
description = "A library of betting utilities to assist with calculation of bets, stakes and markets"
license = "GPL-3.0-only"
authors = ["Robert Peacock <robertjamespeacock@gmail.com>"]
readme = "README.md"
repository = "https://github.com/peaky76/pybet"
documentation = "https://pybet.readthedocs.io/"
keywords = ["betting", "gambling"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "~3.11"

[tool.poetry.group.dev.dependencies]
auto-changelog = "^0.6.0"
coverage = "^7.1.0"
mypy = "^1.0.1"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
ruff = ">=0.0.265,<0.1.4"
sphinx = ">=6.1.3,<8.0.0"
sphinx-rtd-theme = "^1.2.0"
radon = "^6.0.1"

[tool.ruff]
select = [
    "E", # pycodestyle Error
    "F", # pyflakes
    "C90", # mccabe
    "I", # isort
    "N", # pep8-naming
    "UP", # pyupgrade
    "FBT", # flake8-boolean-trap
    "C4", # flake8-comprehensions
    "PYI", # flake8-pyi
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SIM", # flake8-simplify
    # "PTH", # flake8-use-pathlib
    "PERF", # perflint
    "FURB", # refurb
    "RUF", # ruff specific

]
ignore = ["E501", "E731", "F821"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
