[metadata]
name = pybet
version = 0.2.0
author = Robert Peacock
author_email = robertjamespeacock@gmail.com
description =  A library of betting utilities to assist with calculation of bets, stakes and markets
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/peaky76/pybet
project_urls =
    Bug Tracker = https://github.com/peaky76/pybet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src